<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.master.MasterActivity">

    <ImageView
        android:id="@+id/iv_indicator"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_margin="20dp"
        android:contentDescription="@string/indicator"
        android:src="@drawable/ic_indicator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/no_slave_connected"
        app:layout_constraintBottom_toBottomOf="@id/iv_indicator"
        app:layout_constraintStart_toEndOf="@id/iv_indicator"
        app:layout_constraintTop_toTopOf="@id/iv_indicator" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_videos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@id/btn_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_indicator" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/send_to_slaves"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="100"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_send" />

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container_master"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>